# inboxpilot-openenv

./: Dockerfile  LICENSE  README.md  client.py  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
server/: app.py  environment.py
tasks/: easy.json  hard.json  medium.json
